# enem-pdf-parse

./: README.md  pyproject.toml
src/: extract_script.py
src/enem_pdf_extractor/: app.py  main.py
src/enem_pdf_extractor/constants/: enem_constants.py
src/enem_pdf_extractor/services/: find_correct_answer_service.py  get_alternative_list_service.py  get_json_from_question_service.py  handle_IO_errors_service.py  handle_day_one_tests_service.py  handle_day_one_with_images_service.py  handle_day_two_tests_service.py  handle_day_two_with_images_service.py  md_parse_alternatives_service.py  page_preprocessing_service.py  parse_alternatives_service.py  yield_all_substrings_service.py
src/test_output/2023_D1_/: 2023_eng_questions.json  2023_eng_questions.txt  2023_huma_questions.json  2023_huma_questions.txt  2023_lang_questions.json  2023_lang_questions.txt  2023_spani_questions.json  2023_spani_questions.txt
